--- a/levels/settings/mp_rr_arena_skygarden.kv
+++ b/levels/settings/mp_rr_arena_skygarden.kv
@@ -6,8 +6,8 @@
         "mp_rr_canyonlands_mu1_night" "1"
         "mp_rr_canyonlands_mu1"       "1"
         "mp_rr_canyonlands_64k_x_64k" "1"
-		"GibbyLobaFinisher"				"1"
-		"emotescustom"					"1"
+		"common_flowstate"				"1"
+		"ui_flowstate"					"1"
     }
 
     "StreamDB" "mp_rr_desertlands_64k_x_64k"
