--- a/levels/settings/mp_rr_canyonlands_64k_x_64k.kv
+++ b/levels/settings/mp_rr_canyonlands_64k_x_64k.kv
@@ -3,8 +3,8 @@
     "PakList"
     {
         "mp_rr_canyonlands_64k_x_64k" "1"
-		"GibbyLobaFinisher"				"1"
-		"emotescustom"					"1"
+		"common_flowstate"				"1"
+		"ui_flowstate"					"1"
     }
 
     "StreamDB" "mp_rr_canyonlands_64k_x_64k"
