--- a/levels/settings/mp_rr_canyonlands_mu1_night.kv
+++ b/levels/settings/mp_rr_canyonlands_mu1_night.kv
@@ -3,8 +3,8 @@
     "PakList"
     {
         "mp_rr_canyonlands_mu1_night"       "1"
-		"GibbyLobaFinisher"				"1"
-		"emotescustom"					"1"
+		"common_flowstate"				"1"
+		"ui_flowstate"					"1"
     }
 
     "StreamDB" "mp_rr_canyonlands_mu1"
