--- a/levels/settings/mp_rr_canyonlands_mu2_tt.kv
+++ b/levels/settings/mp_rr_canyonlands_mu2_tt.kv
@@ -4,8 +4,8 @@
     {
         "mp_rr_desertlands_64k_x_64k" "1"
         "mp_rr_canyonlands_mu1"       "1"
-		"GibbyLobaFinisher"				"1"
-		"emotescustom"					"1"
+		"common_flowstate"				"1"
+		"ui_flowstate"					"1"
     }
 
     "StreamDB" "mp_rr_canyonlands_mu1"
